docs/assets/css/parallax/parallax.less
@import "../../../../less/variables.less";
// Scroll progress bar
// Paralax effect: https://github.com/nk-o/jarallax
// Page is 100% wide

.progress {
  margin: 0;
  height: 6px;
  position: fixed;
  right: 0;
  left: 0;
  z-index: 1040;
}

.progress-fixed-top .progress-bar {
  background-color: @ku-red;
}

.ku-topbar {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  transition: all 0.3s ease;

  &.ku-topbar-fixed-top {
    transform: translatey(6px);
  }
}

.ku-nav {
  position: fixed;
  left: 0;
  right: 0;
  transform: translatey(28px);
  transition: all 0.3s ease;

  &.ku-nav-top {
    transform: translatey(33px);
  }
}

.ku-branding {
  &::after {
    display: none;
  }
}

#content {
  margin-top: 42px;
}

.breadcrumbs,
.local-footer {
  display: none;
}

.main-area {
  margin-bottom: 0;
}

.main-content {
  padding-bottom: 0;
}

.campaign-block {
  color: @white-color;
  flex-direction: column;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  z-index: 0;
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;

  .block-content {
    font-size: 14px;
    padding: 10px 20px;
    margin: 10px 0;
    width: 100%;

    h3 {
      margin-top: 0;
    }
  }
}

.jarallax {
  color: @text-color;
  min-height: 100vh;

  & > .jarallax-img {
    position: absolute;
    object-fit: cover;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
  }

  .block-content {
    padding: 15px;
    background: rgba(@white-color, .9);
  }
}
@media all and (min-width: @screen-sm) {
  #content {
    margin-top: 68px;
  }

  .campaign-block {
    /* Take desktop scrollbar into account: */
    width: calc(100vw - 9px);

    .block-content {
      max-width: 746px;
      font-size: 18px;
      padding: 30px;
    }
  }
+
  .jarallax {
    .block-content {
      box-shadow: 0 1px 8px rgba(@gray-base, .1), 0 16px 48px rgba(@gray-base, .1), 0 24px 60px rgba(@gray-base, .1);
    }
  }
}
@media all and (min-width: @screen-md) {
  .campaign-block .block-content {
    max-width: 966px;
  }
}
@media all and (min-width: @screen-lg) {
  .campaign-block .block-content {
    max-width: 1018px;
  }
}

